# darknet

./: .gitignore  CMakeLists.txt  CompilerBenchmark.ipynb  Makefile  README.md  build_all.sh  detect.sh
cfg/: extraction.cfg
python/: darknet-Copy1.ipynb
weights/: Makefile  getall.sh
